--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/upgrade.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/upgrade.yml
@@ -14,8 +14,8 @@
     url: "{{ artifactory_tar }}"
     timeout: "{{ artifactory_download_timeout }}"
     dest: "{{ jfrog_home_directory }}"
-  register: downloadartifactory
-  until: downloadartifactory is succeeded
+  register: download_artifactory
+  until: download_artifactory is succeeded
   retries: 3
   when: not artifactory_tar_check.stat.exists
 
@@ -28,14 +28,14 @@
     owner: "{{ artifactory_user }}"
     group: "{{ artifactory_group }}"
     creates: "{{ artifactory_untar_home }}"
-  when: downloadartifactory is succeeded
+  when: download_artifactory is succeeded
 
 - name: Stop artifactory
   become: yes
   systemd:
     name: "{{ artifactory_daemon }}"
     state: stopped
-  when: downloadartifactory.changed
+  when: download_artifactory.changed
 
 - name: Ensure jfrog_home_directory exists
   become: yes
@@ -48,12 +48,12 @@
   file:
     path: "{{ artifactory_home }}/app"
     state: absent
-  when: downloadartifactory.changed
+  when: download_artifactory.changed
 
 - name: Copy new app to artifactory app
   become: yes
   command: "cp -r {{ artifactory_untar_home }}/app/. {{ artifactory_home }}/app"
-  when: downloadartifactory.changed
+  when: download_artifactory.changed
 
 - name: Configure single license
   become: yes
