--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/defaults/main.yml
@@ -2,7 +2,7 @@
 # defaults file for mc
 
 # The version of missioncontrol to install
-missioncontrol_version: 4.7.8
+missioncontrol_version: 4.7.10
 
 # whether to enable HA
 mc_ha_enabled: false
@@ -44,14 +44,14 @@ es_gid: 1060
 mc_es_conf_base: "/etc/elasticsearch"
 mc_es_user: admin
 mc_es_password: admin
-mc_es_url: "http://localhost:8082"
-mc_es_base_url: "http://localhost:8082/elasticsearch"
+mc_es_url: "http://localhost:9200"
+mc_es_base_url: "http://localhost:9200/elasticsearch"
 mc_es_transport_port: 9300
 
 mc_es_home: "/usr/share/elasticsearch"
 mc_es_data_dir: "/var/lib/elasticsearch"
 mc_es_log_dir: "/var/log/elasticsearch"
-mc_es_java_home: "/usr/share/elasticsearch/jdk"
+mc_es_java_home: "{{ mc_thirdparty_path }}/java"
 mc_es_script_path: "/usr/share/elasticsearch/bin"
 mc_es_searchgaurd_home: "/usr/share/elasticsearch/plugins/search-guard-7"
 
