--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/install.yml
@@ -7,7 +7,7 @@
   yum:
     name: expect
     state: present
-  when: ansible_os_family == 'Redhat'
+  when: ansible_os_family == 'RedHat'
 
 - name: Install expect dependency
   become: yes
@@ -35,18 +35,33 @@
     shell: /bin/bash
     state: present
 
+- name: Check if mc tar exists
+  become: yes
+  stat:
+    path: "{{ jfrog_home_directory }}/{{ mc_tar_file_name }}"
+  register: mc_tar_check
+
 - name: Download mc
   become: yes
-  unarchive:
-    src: "{{ mc_tar }}"
+  get_url:
+    url: "{{ mc_tar }}"
+    timeout: "{{ mc_download_timeout }}"
     dest: "{{ jfrog_home_directory }}"
-    remote_src: yes
+  register: download_mc
+  until: download_mc is succeeded
+  retries: 3
+  when: not mc_tar_check.stat.exists
+
+- name: Extract mc tar
+  become: yes
+  unarchive:
+    src: "{{ jfrog_home_directory }}/{{ mc_tar_file_name }}"
+    dest: "{{ jfrog_home_directory }}"
+    remote_src: true
     owner: "{{ mc_user }}"
     group: "{{ mc_group }}"
     creates: "{{ mc_untar_home }}"
-  register: downloadmc
-  until: downloadmc is succeeded
-  retries: 3
+  when: download_mc is succeeded
 
 - name: Check if app directory exists
   become: yes
