--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/main.yml
@@ -1,6 +1,10 @@
 - name: perform installation
   include_tasks: "install.yml"
-  when: not mc_upgrade_only
+  when: 
+    - mc_enabled
+    - not mc_upgrade_only
 - name: perform upgrade
   include_tasks: "upgrade.yml"
-  when: mc_upgrade_only
+  when:
+    - mc_enabled
+    - mc_upgrade_only
