--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/upgrade-elasticsearch.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/upgrade-elasticsearch.yml
@@ -29,7 +29,7 @@
   shell: |
     {{ mc_es_script_path }}/elasticsearch-plugin remove {{ check_searchguard_bundle_result.files[0].path }}
   environment:
-    JAVA_HOME: "{{ mc_es_java_home }}"
+    ES_JAVA_HOME: "{{ mc_es_java_home }}"
     ES_PATH_CONF: "{{ mc_es_conf_base }}/config"
   register: remove_searchguard_result
   when: check_searchguard_bundle_result.matched == 1
@@ -75,6 +75,7 @@
       - --exclude=config
     owner: elasticsearch
     group: elasticsearch
+    creates: "{{ mc_es_script_path }}"
   register: unarchive_result
   when: check_elasticsearch_package_result.matched > 0
 
@@ -107,4 +108,16 @@
     ES_JAVA_HOME: "{{ mc_es_java_home }}"
     ES_PATH_CONF: "{{ mc_es_conf_base }}/"
   when: unarchive_result.extract_results.rc | default(128) == 0
-  register: start_elastcsearch_upgraded
+  register: start_elastcsearch
+
+- name: Wait for elasticsearch to start
+  pause:
+    seconds: 30
+  when: start_elasticsearch.changed
+
+- name: Check if elasticsearch is running
+  wait_for: 
+    host: localhost
+    port: "{{ mc_es_transport_port }}"
+    delay: 5
+    connect_timeout: 1
