--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/defaults/main.yml
@@ -2,6 +2,8 @@
 # defaults file for artifactory_nginx
 
 ## For production deployments,You SHOULD change it.
-# server_name: test.artifactory.com
+server_name: test.artifactory.com
 
 nginx_daemon: nginx
+
+redirect_http_to_https_enabled: true
