--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/tasks/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/tasks/main.yml
@@ -1,5 +1,39 @@
 ---
 # tasks file for artifactory_nginx
+- name: Install dependencies
+  include_tasks: "{{ ansible_os_family }}.yml"
+
+- name: Install nginx after dependency installation
+  become: yes
+  package:
+    name: nginx
+    state: present
+  register: package_res
+  retries: 5
+  delay: 60
+  until: package_res is success
+
+- name: Configure main nginx conf file.
+  become: yes
+  copy:
+    src: nginx.conf
+    dest: /etc/nginx/nginx.conf
+    owner: root
+    group: root
+    mode: '0755'
+
+- name: Configure redirect nginx conf
+  become: yes
+  copy:
+    src: redirect_http_to_https.conf
+    dest: /etc/nginx/conf.d/redirect_http_to_https.conf
+    owner: root
+    group: root
+    mode: '0755'
+  when:
+    - redirect_http_to_https_enabled | bool
+  notify: restart nginx
+
 - name: Configure the artifactory nginx conf
   become: yes
   template:
