[Ansible] JFrog Platform 7.24.3

--- a/Ansible/ansible_collections/jfrog/platform/ansible.cfg
+++ b/Ansible/ansible_collections/jfrog/platform/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 host_key_checking = false
 stdout_callback = debug
-remote_tmp = /tmp/.ansible/tmp
+remote_tmp = /tmp/${USER}/ansible
 timeout = 20
