--- a/Ansible/ansible_collections/jfrog/platform/roles/distribution/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/distribution/tasks/install.yml
@@ -1,33 +1,18 @@
----
 - debug:
     msg: "Performing installation of Distribution version - {{ distribution_version }}"
 
-- name: Install expect dependency
-  yum:
-    name: expect
-    state: present
-  become: yes
-  when: ansible_os_family == 'RedHat'
-
-- name: Install expect dependency
-  apt:
-    name: expect
-    state: present
-    update_cache: yes
-  become: yes
-  when: ansible_os_family == 'Debian'
+- name: Install prerequisite packages
+  include_tasks: "{{ ansible_os_family }}.yml"
 
 - name: Ensure group distribution exist
   become: yes
   group:
     name: "{{ distribution_group }}"
-    gid: "{{ distribution_gid }}"
     state: present
 
 - name: Ensure user distribution exist
   become: yes
   user:
-    uid: "{{ distribution_uid }}"
     name: "{{ distribution_user }}"
     group: "{{ distribution_group }}"
     create_home: yes
@@ -136,10 +121,10 @@
   template:
     src: "{{ distribution_system_yaml_template }}"
     dest: "{{ distribution_home }}/var/etc/system.yaml"
-  when: 
-    - distribution_systemyaml is defined  
+  when:
+    - distribution_systemyaml is defined
     - distribution_systemyaml|length > 0
-    - distribution_systemyaml_override or (not systemyaml.stat.exists) 
+    - distribution_systemyaml_override or (not systemyaml.stat.exists)
   notify: restart distribution
 
 - name: Configure installer info
@@ -160,8 +145,7 @@
 
 - name: Install Distribution as a service
   become: yes
-  shell: |
-    {{ distribution_archive_service_cmd }}
+  shell: "{{ distribution_archive_service_cmd }}"
   args:
     chdir: "{{ distribution_install_script_path }}"
     creates: "{{ distribution_service_file }}"
@@ -179,10 +163,13 @@
 - name: Restart distribution
   meta: flush_handlers
 
-- name : Wait for distribution to be fully deployed
-  uri: url=http://127.0.0.1:8082/router/api/v1/system/health timeout=130
+- name: Make sure distribution is up and running
+  uri:
+    url: http://127.0.0.1:8082/router/api/v1/system/health
+    timeout: 130
+    status_code: 200
   register: result
-  until: result.status == 200
+  until: result is succeeded
   retries: 25
   delay: 5
   when: not ansible_check_mode
