--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/upgrade.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/upgrade.yml
@@ -1,4 +1,3 @@
----
 - debug:
     msg: "Performing Upgrade of missionControl version - {{ missioncontrol_version }}"
 
@@ -71,10 +70,10 @@
   template:
     src: "{{ mc_system_yaml_template }}"
     dest: "{{ mc_home }}/var/etc/system.yaml"
-  when: 
-    - mc_systemyaml is defined  
+  when:
+    - mc_systemyaml is defined
     - mc_systemyaml|length > 0
-    - mc_systemyaml_override or (not systemyaml.stat.exists) 
+    - mc_systemyaml_override or (not systemyaml.stat.exists)
   notify: restart missioncontrol
 
 - name: Check if install.sh wrapper script exist
@@ -97,7 +96,7 @@
     apply:
       environment:
         YQ_PATH: "{{ mc_thirdparty_path }}/yq"
-  when: 
+  when:
     - upgrade_wrapper_script.stat.exists
     - download_mc.changed
 
@@ -120,10 +119,13 @@
 - name: Restart missioncontrol
   meta: flush_handlers
 
-- name : Wait for missionControl to be fully deployed
-  uri: url=http://127.0.0.1:8082/router/api/v1/system/health timeout=130
+- name: Make sure missionControl is up and running
+  uri:
+    url: http://127.0.0.1:8082/router/api/v1/system/health
+    timeout: 130
+    status_code: 200
   register: result
-  until: result.status == 200
+  until: result is succeeded
   retries: 25
   delay: 5
   when: not ansible_check_mode
