--- a/Ansible/ansible_collections/jfrog/platform/group_vars/all/vars.yml
+++ b/Ansible/ansible_collections/jfrog/platform/group_vars/all/vars.yml
@@ -1,7 +1,6 @@
----
 # Defaults
-## Note : These values are global and can be overridden in role/<product>/defaults/main.yaml file
-## For production deployments,You may want to generate your master amd join keys and apply it to all the nodes.
+## Note: These values are global and have precedence over role/<product>/defaults/main.yaml
+## For production deployments, You may want to generate your master amd join keys and apply it to all the nodes.
 master_key: ee69d96880726d3abf6b42b97d2ae589111ea95c2a8bd5876ec5cd9e8ee34f86
 join_key: 83da88eaaa08dfed5b86888fcec85f19ace0c3ff8747bcefcec2c9769ad4043d
 
@@ -62,12 +61,12 @@ mc_db_url: >-
     {%- endfor -%}
 
 # Postgresql users and databases/schemas
-db_users: 
+db_users:
   - { db_user: "{{ artifactory_db_user }}", db_password: "{{ artifactory_db_password }}" }
   - { db_user: "{{ xray_db_user }}", db_password: "{{ xray_db_password }}" }
   - { db_user: "{{ distribution_db_user }}", db_password: "{{ distribution_db_password }}" }
   - { db_user: "{{ mc_db_user }}", db_password: "{{ mc_db_password }}" }
-dbs: 
+dbs:
   - { db_name: "{{ artifactory_db_name }}", db_owner: "{{ artifactory_db_user }}" }
   - { db_name: "{{ xray_db_name }}", db_owner: "{{ xray_db_user }}" }
   - { db_name: "{{ distribution_db_name }}", db_owner: "{{ distribution_db_user }}" }
