--- a/Ansible/ansible_collections/jfrog/platform/roles/distribution/tasks/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/distribution/tasks/main.yml
@@ -1,9 +1,10 @@
-- name: perform installation
+- name: Perform installation
   include_tasks: "install.yml"
   when:
     - distribution_enabled
     - not distribution_upgrade_only
-- name: perform upgrade
+
+- name: Perform upgrade
   include_tasks: "upgrade.yml"
   when:
     - distribution_enabled
