--- a/Ansible/ansible_collections/jfrog/platform/roles/distribution/tasks/upgrade.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/distribution/tasks/upgrade.yml
@@ -1,4 +1,3 @@
----
 - debug:
     msg: "Performing upgrade of Distribution version to {{ distribution_version }} "
 
@@ -60,8 +59,8 @@
   template:
     src: "{{ distribution_system_yaml_template }}"
     dest: "{{ distribution_home }}/var/etc/system.yaml"
-  when: 
-    - distribution_systemyaml is defined  
+  when:
+    - distribution_systemyaml is defined
     - distribution_systemyaml|length > 0
     - distribution_systemyaml_override or (not systemyaml.stat.exists) 
   notify: restart distribution
@@ -124,10 +123,13 @@
 - name: Restart distribution
   meta: flush_handlers
 
-- name : Wait for distribution to be fully deployed
-  uri: url=http://127.0.0.1:8082/router/api/v1/system/health timeout=130
+- name: Make sure distribution is up and running
+  uri:
+    url: http://127.0.0.1:8082/router/api/v1/system/health
+    timeout: 130
+    status_code: 200
   register: result
-  until: result.status == 200
+  until: result is succeeded
   retries: 25
   delay: 5
   when: not ansible_check_mode
