--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/defaults/main.yml
@@ -1,4 +1,3 @@
----
 # defaults file for mc
 
 # The version of missioncontrol to install
@@ -7,9 +6,9 @@ missioncontrol_version: 4.7.10
 # whether to enable HA
 mc_ha_enabled: false
 
-mc_ha_node_type : master
+mc_ha_node_type: master
 
-# The location where mc should install.
+# The location where mc should install
 jfrog_home_directory: /opt/jfrog
 
 # The remote mc download file
@@ -26,7 +25,7 @@ mc_home: "{{ jfrog_home_directory }}/mc"
 mc_install_script_path: "{{ mc_home }}/app/bin"
 mc_thirdparty_path: "{{ mc_home }}/app/third-party"
 mc_archive_service_cmd: "{{ mc_install_script_path }}/installService.sh"
-mc_service_file : /lib/systemd/system/mc.service
+mc_service_file: /lib/systemd/system/mc.service
 
 #mc users and groups
 mc_user: jfmc
@@ -51,11 +50,9 @@ mc_es_transport_port: 9300
 mc_es_home: "/usr/share/elasticsearch"
 mc_es_data_dir: "/var/lib/elasticsearch"
 mc_es_log_dir: "/var/log/elasticsearch"
-mc_es_java_home: "{{ mc_thirdparty_path }}/java"
+mc_es_java_home: "/usr/share/elasticsearch/jdk"
 mc_es_script_path: "/usr/share/elasticsearch/bin"
 mc_es_searchgaurd_home: "/usr/share/elasticsearch/plugins/search-guard-7"
-
-flow_type: archive
 
 # if this is an upgrade
 mc_upgrade_only: false
