--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/main.yml
@@ -1,9 +1,10 @@
-- name: perform installation
+- name: Perform installation
   include_tasks: "install.yml"
-  when: 
+  when:
     - mc_enabled
     - not mc_upgrade_only
-- name: perform upgrade
+
+- name: Perform upgrade
   include_tasks: "upgrade.yml"
   when:
     - mc_enabled
