--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/setup-elasticsearch.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/setup-elasticsearch.yml
@@ -2,14 +2,12 @@
   become: yes
   group:
     name: elasticsearch
-    gid: "{{ es_gid }}"
     state: present
 
 - name: Ensure user elasticsearch exists
   become: yes
   user:
     name: elasticsearch
-    uid: "{{ es_uid }}"
     group: elasticsearch
     create_home: yes
     home: "{{ mc_es_home }}"
@@ -47,12 +45,13 @@
     limit_item: nproc
     value: '4096'
 
-- name: Setting sysctl values
+- name: Set vm.max_map_count in /etc/sysctl.conf
   become: yes
-  sysctl: name={{ item.name }} value={{ item.value }} sysctl_set=yes
-  loop:
-    - { name: "vm.max_map_count", value: 262144}
   ignore_errors: yes
+  sysctl:
+    name: vm.max_map_count
+    value: '262144'
+    sysctl_set: yes
 
 - name: Find elasticsearch package
   become: yes
@@ -87,7 +86,7 @@
       - --strip-components=1
     owner: elasticsearch
     group: elasticsearch
-    creates: "{{ mc_es_script_path }}"
+    creates: "{{ mc_es_java_home }}"
   register: unarchive_result
   when: check_elasticsearch_package_result.matched > 0
 
@@ -111,9 +110,7 @@
     dest: "{{ mc_es_conf_base }}/elasticsearch.yml"
     owner: elasticsearch
     group: elasticsearch
-  when:
-    - unarchive_result.extract_results.rc | default(128) == 0
-    - flow_type in ["ha-cluster", "ha-upgrade"]
+  when: unarchive_result.extract_results.rc | default(128) == 0
 
 - name: Generate elasticsearch.yml template file
   become: yes
@@ -122,9 +119,7 @@
     dest: "{{ mc_es_conf_base }}/elasticsearch.yml"
     owner: elasticsearch
     group: elasticsearch
-  when:
-    - unarchive_result.extract_results.rc | default(128) == 0
-    - flow_type in ["archive", "upgrade"]
+  when: unarchive_result.extract_results.rc | default(128) == 0
 
 - name: Create empty unicast_hosts.txt file
   become: yes
@@ -168,7 +163,7 @@
   when: start_elasticsearch.changed
 
 - name: Check if elasticsearch is running
-  wait_for: 
+  wait_for:
     host: localhost
     port: "{{ mc_es_transport_port }}"
     delay: 5
@@ -176,7 +171,6 @@
 
 - name: Init searchguard plugin
   become: yes
-  become_user: elasticsearch
   shell: |
     ./sgadmin.sh -p {{ mc_es_transport_port }} -cacert root-ca.pem \
     -cert sgadmin.pem -key sgadmin.key -cd {{ mc_es_searchgaurd_home }}/sgconfig/ -nhnv -icl
