--- a/Ansible/ansible_collections/jfrog/platform/roles/postgres/tasks/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/postgres/tasks/RedHat.yml
@@ -1,14 +1,23 @@
----
-
-- name: install EPEL repository
+- name: Import EPEL GPG public key
   become: yes
-  yum: name=epel-release state=present
-  when: >  # not for Fedora
-    ansible_distribution == 'CentOS' or
-    ansible_distribution == 'Red Hat Enterprise Linux'
+  rpm_key:
+    key: https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-{{ version }}
+    state: present
+  vars:
+    version: "{{ ansible_distribution_major_version }}"
 
-- name: install acl
+- name: Install EPEL repository
   become: yes
+  yum:
+    name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ version }}.noarch.rpm
+    state: present
+  vars:
+    version: "{{ ansible_distribution_major_version }}"
+  when: ansible_distribution in ['CentOS', 'RedHat']
+
+- name: Install prerequisite packages
+  become: yes
+  ignore_errors: yes
   yum:
     name:
       - acl
@@ -16,63 +25,43 @@
       - wget
       - perl
     state: present
-  ignore_errors: yes
 
-- name: install python3-psycopg2
+- name: Install python3-psycopg2
   become: yes
   yum:
-    name:
-      - python3-psycopg2
+    name: python3-psycopg2
     state: present
   when: ansible_distribution_major_version == '8'
 
-- name: install python2-psycopg2
+- name: Install python2-psycopg2
   become: yes
   yum:
-    name:
-      - python-psycopg2
+    name: python-psycopg2
     state: present
   when: ansible_distribution_major_version == '7'
 
-- name: fixup some locale issues
+- name: Fixup some locale issues
   become: yes
   lineinfile:
-    dest: /etc/default/locale
-    line: 'LANGUAGE="{{ item }}"'
+    dest: /etc/locale.conf
+    line: "{{ item }}"
     state: present
     create: yes
   loop:
-    - 'en_US:en'
-    - 'en_us.UTF-8'
+    - LANG=en_us.UTF-8
+    - LANGUAGE=en_us.UTF-8
 
-- name: get latest version
-  vars:
-    base: http://download.postgresql.org/pub/repos/yum
-    ver: "{{ ansible_distribution_major_version }}"
-  shell: |
-    set -eo pipefail
-    wget -O - {{ base }}/reporpms/EL-{{ ver }}-x86_64/ 2>/dev/null | \
-    grep 'pgdg-redhat-repo-latest' | \
-    perl -pe 's/^.*rpm">//g' | \
-    perl -pe 's/<\/a>.*//g' | \
-    tail -n 1
-  args:
-    executable: /bin/bash
-  changed_when: false
-  check_mode: false
-  register: latest_version
-  tags: [skip_ansible_lint]
-
-- name: config postgres repository
+- name: Install postgres repository
   become: yes
-  vars:
-    base: http://download.postgresql.org/pub/repos/yum
-    ver: "{{ ansible_distribution_major_version }}"
   yum:
-    name: "{{ base }}/reporpms/EL-{{ ver }}-x86_64/{{ latest_version.stdout }}"
+    name: "{{ base }}/reporpms/EL-{{ version }}-x86_64/{{ repo_file_name }}"
     state: present
+  vars:
+    base: https://download.postgresql.org/pub/repos/yum
+    version: "{{ ansible_distribution_major_version }}"
+    repo_file_name: pgdg-redhat-repo-latest.noarch.rpm
 
-- name: install postgres packages
+- name: Install postgres packages
   become: yes
   yum:
     name:
