--- a/Ansible/ansible_collections/jfrog/platform/roles/postgres/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/postgres/tasks/install.yml
@@ -1,11 +1,10 @@
----
-- name: define OS-specific variables
+- name: Define OS-specific variables
   include_vars: "{{ ansible_os_family }}.yml"
 
-- name: perform installation
+- name: Install prerequisite packages
   include_tasks: "{{ ansible_os_family }}.yml"
 
-- name: Set PostgreSQL environment variables.
+- name: Set PostgreSQL environment variables
   become: yes
   template:
     src: postgres.sh.j2
@@ -13,7 +12,7 @@
     mode: 0644
   notify: restart postgresql
 
-- name: Ensure PostgreSQL data directory exists.
+- name: Ensure PostgreSQL data directory exists
   become: yes
   become_user: postgres
   file:
@@ -40,7 +39,7 @@
     dest: "{{ postgresql_config_path }}/{{ item }}"
     owner: postgres
     group: postgres
-    mode: u=rw,go=r
+    mode: 0644
   loop:
     - pg_hba.conf
     - postgresql.conf
@@ -56,6 +55,8 @@
 - name: Hold until Postgresql is up and running
   wait_for:
     port: "{{ postgres_port }}"
+    timeout: 120
+    sleep: 10
 
 - name: Create users
   become: yes
@@ -64,7 +65,7 @@
     name: "{{ item.db_user }}"
     password: "{{ item.db_password }}"
     conn_limit: "-1"
-  loop: "{{ db_users|default([]) }}"
+  loop: "{{ db_users | default([]) }}"
   no_log: true  # secret passwords
 
 - name: Create a database
@@ -77,7 +78,7 @@
     lc_collate: "{{ postgres_locale }}"
     lc_ctype: "{{ postgres_locale }}"
     template: template0
-  loop: "{{ dbs|default([]) }}"
+  loop: "{{ dbs | default([]) }}"
 
 - name: Check if MC schemas already exists
   become: yes
@@ -85,15 +86,17 @@
   command: psql -d {{ mc_db_name }} -t -c "\dn"
   register: mc_schemas_loaded
   when: mc_enabled
+  changed_when: false
 
 - name: Create schemas for mission-control
   become: yes
   become_user: postgres
   command: psql -d {{ mc_db_name }} -c 'CREATE SCHEMA {{ item }} authorization {{ mc_db_user }}'
-  loop: "{{  mc_schemas|default([]) }}"
-  when: 
+  loop: "{{  mc_schemas | default([]) }}"
+  when:
     - mc_enabled
-    - "mc_schemas_loaded.stdout is defined and '{{ item }}' not in mc_schemas_loaded.stdout"
+    - mc_schemas_loaded.stdout is defined
+    - item not in mc_schemas_loaded.stdout
 
 - name: Grant all privileges to mc user on its schema
   become: yes
@@ -104,7 +107,7 @@
     type: schema
     roles: "{{ mc_db_user }}"
     objs: "{{ item }}"
-  loop: "{{ mc_schemas|default([]) }}"
+  loop: "{{ mc_schemas | default([]) }}"
   when: mc_enabled
 
 - name: Grant privs on db
@@ -116,7 +119,7 @@
     state: present
     privs: ALL
     type: database
-  loop: "{{ dbs|default([]) }}"
+  loop: "{{ dbs | default([]) }}"
 
 - debug:
     msg: "Restarted postgres systemd {{ postgresql_daemon }}"
