--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/defaults/main.yml
@@ -1,15 +1,14 @@
----
 # defaults file for xray
 
 # The version of xray to install
-xray_version: 3.29.0
+xray_version: 3.30.1
 
 # whether to enable HA
 xray_ha_enabled: false
 
-xray_ha_node_type : master
+xray_ha_node_type: master
 
-# The location where xray should install.
+# The location where xray should install
 jfrog_home_directory: /opt/jfrog
 
 # The remote xray download file
@@ -26,7 +25,7 @@ xray_home: "{{ jfrog_home_directory }}/xray"
 xray_install_script_path: "{{ xray_home }}/app/bin"
 xray_thirdparty_path: "{{ xray_home }}/app/third-party"
 xray_archive_service_cmd: "{{ xray_install_script_path }}/installService.sh"
-xray_service_file : /lib/systemd/system/xray.service
+xray_service_file: /lib/systemd/system/xray.service
 
 #xray users and groups
 xray_user: xray
@@ -36,8 +35,6 @@ xray_uid: 1035
 xray_gid: 1035
 
 xray_daemon: xray
-
-flow_type: archive
 
 #rabbitmq user
 xray_rabbitmq_user: guest
@@ -50,21 +47,18 @@ xray_upgrade_only: false
 
 xray_system_yaml_template: system.yaml.j2
 
-linux_distro: "{{ ansible_distribution | lower }}{{ansible_distribution_major_version}}"
+linux_distro: "{{ ansible_distribution | lower }}{{ ansible_distribution_major_version }}"
 
 xray_db_util_search_filter:
   ubuntu16:
     db5: 'db5.3-util.*ubuntu.*amd64\.deb'
     db: 'db-util.*ubuntu.*all.deb'
   ubuntu18:
-    db5: 'db5.3-util.*ubuntu.*amd64\.deb'
+    db5: 'db5.3-util.*ubuntu1.1.*amd64\.deb'
     db: 'db-util.*ubuntu.*all.deb'
   ubuntu20:
-    db5: 'db5.3-util.*ubuntu.*amd64\.deb'
+    db5: 'db5.3-util.*dfsg.*ubuntu.*amd64\.deb'
     db: 'db-util.*ubuntu.*all.deb'
-  debian8:
-    db5: 'db5.3-util.*deb8.*amd64\.deb'
-    db: 'db-util_([0-9]{1,3}\.?){3}_all\.deb'
   debian9:
     db5: 'db5.3-util.*deb9.*amd64\.deb'
     db: 'db-util_([0-9]{1,3}\.?){3}_all\.deb'
@@ -76,7 +70,7 @@ xray_db_util_search_filter:
 yum_python_interpreter: >-
     {%- if linux_distro is not defined -%}
         /usr/bin/python3
-    {%- elif linux_distro in ['centos7', 'rhel7'] -%}
+    {%- elif linux_distro in ['centos7', 'redhat7'] -%}
         /usr/bin/python
     {%- else -%}
         /usr/bin/python3
