--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/install.yml
@@ -1,33 +1,18 @@
----
 - debug:
     msg: "Performing installation of Xray version : {{ xray_version }}"
 
-- name: Install expect dependency
-  become: yes
-  yum:
-    name: expect
-    state: present
-  when: ansible_os_family == 'RedHat'
-
-- name: Install expect dependency
-  become: yes
-  apt:
-    name: expect
-    state: present
-    update_cache: yes
-  when: ansible_os_family == 'Debian'
+- name: Install prerequisite packages
+  include_tasks: "{{ ansible_os_family }}.yml"
 
 - name: Ensure group xray exist
   become: yes
   group:
     name: "{{ xray_group }}"
-    gid: "{{ xray_gid }}"
     state: present
 
 - name: Ensure user xray exist
   become: yes
   user:
-    uid: "{{ xray_uid }}"
     name: "{{ xray_user }}"
     group: "{{ xray_group }}"
     create_home: yes
@@ -150,10 +135,10 @@
   template:
     src: "{{ xray_system_yaml_template }}"
     dest: "{{ xray_home }}/var/etc/system.yaml"
-  when: 
-    - xray_systemyaml is defined  
+  when:
+    - xray_systemyaml is defined
     - xray_systemyaml|length > 0
-    - xray_systemyaml_override or (not systemyaml.stat.exists) 
+    - xray_systemyaml_override or (not systemyaml.stat.exists)
   notify: restart xray
 
 - name: Ensure permissions are correct
@@ -167,8 +152,7 @@
 
 - name: Install xray as a service
   become: yes
-  shell: |
-    {{ xray_archive_service_cmd }}
+  shell: "{{ xray_archive_service_cmd }}"
   args:
     chdir: "{{ xray_install_script_path }}"
     creates: "{{ xray_service_file }}"
@@ -177,10 +161,13 @@
 - name: Restart xray
   meta: flush_handlers
 
-- name : Wait for xray to be fully deployed
-  uri: url=http://127.0.0.1:8082/router/api/v1/system/health timeout=130
+- name: Make sure xray is up and running
+  uri:
+    url: http://127.0.0.1:8082/router/api/v1/system/health
+    timeout: 130
+    status_code: 200
   register: result
-  until: result.status == 200
+  until: result is succeeded
   retries: 25
   delay: 5
   when: not ansible_check_mode
