--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/upgrade.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/upgrade.yml
@@ -1,4 +1,3 @@
----
 - debug:
     msg: "Performing upgrade of Xray version to {{ xray_version }}..."
 
@@ -33,7 +32,7 @@
 - name: stop xray
   become: yes
   systemd:
-    name: "{{ xray_daemon }}"   
+    name: "{{ xray_daemon }}"
     state: stopped
   when: download_xray.changed
 
@@ -104,10 +103,10 @@
   template:
     src: "{{ xray_system_yaml_template }}"
     dest: "{{ xray_home }}/var/etc/system.yaml"
-  when: 
-    - xray_systemyaml is defined  
+  when:
+    - xray_systemyaml is defined
     - xray_systemyaml|length > 0
-    - xray_systemyaml_override or (not systemyaml.stat.exists) 
+    - xray_systemyaml_override or (not systemyaml.stat.exists)
   notify: restart xray
 
 - name: configure installer info
@@ -129,10 +128,13 @@
 - name: Restart xray
   meta: flush_handlers
 
-- name : wait for xray to be fully deployed
-  uri: url=http://127.0.0.1:8082/router/api/v1/system/health timeout=130
+- name: Make sure xray is up and running
+  uri:
+    url: http://127.0.0.1:8082/router/api/v1/system/health
+    timeout: 130
+    status_code: 200
   register: result
-  until: result.status == 200
+  until: result is succeeded
   retries: 25
   delay: 5
   when: not ansible_check_mode
